# chase-harness

./: .chase-computer-use-task.md  .chase-dashboard-detail-task.md  .chase-dashboard-task.md  .chase-ray-task.md  .claude-bugfix.md  .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
.chase-ray/: queue.json
chase/: __init__.py  __main__.py  cli.py  computer_use.py  config.py  cost.py  dotenv.py  fmt.py  handoff.py  logging.py  orchestrator.py  state.py  subprocess.py  trust.py
chase/adapters/: __init__.py  claude.py  codex.py  gemini.py
chase/agents/: base.py  evaluator.py  generator.py  negotiator.py  planner.py
chase/ray/: __init__.py  cli.py  config.py  daemon.py  dashboard.py  monitor.py  scheduler.py  sync.py
docs/superpowers/plans/: 2026-05-05-trust-layer.md
prompts/: evaluator.md  generator.md  negotiator.md  planner.md
tests/: test_cli_features.py  test_cli_plan.py  test_enhancements.py  test_ray_audit_display.py  test_ray_bulk_approve.py  test_ray_inspect.py  test_ray_trust.py  test_trust.py
